hphp/hack/test/typecheck/idx_too_many_args.php.exp
File "idx_too_many_args.php", line 9, characters 8-31:
Too many arguments (Typing[4105])
File "hhi_lib__srcs/idx.hhi", line 22, characters 10-12:
Definition is here
